# risk-clone

./: .gitignore  .mcp.json  README.md  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ios.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
editor/: index.html  server.py  style.css
editor/js/: app.js  faces.js  graph.js  history.js  io.js  renderer.js  snap.js  territories.js  ui-panel.js
hud/: desktop-landscape.hud.json  hud.json  mobile-landscape.hud.json  mobile-portrait.hud.json
hud-editor/: index.html  package-lock.json  package.json
hud-editor/server/: proxy.ts  tsconfig.json
hud-editor/src/: App.css  App.tsx  store.ts  types.ts
maps/original/: map.json  map.risk.json
mobile/: .gitignore  README.md  pubspec.yaml
mobile/assets/: hud.json
mobile/lib/: app.dart  main.dart  objectbox-model.json  objectbox.g.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  (+1 more)
risk/: game.py  player.py
scripts/: generate_golden_fixtures.py
tests/: conftest.py  test_cards.py  test_combat.py  test_fortify.py  test_full_game.py  test_game_state.py  test_hard_agent.py  test_human_agent.py  test_map_data.py  test_map_graph.py  test_medium_agent.py  test_messages.py  test_models.py  test_reinforcements.py  test_server.py  test_setup.py  test_simulation.py  test_turn.py
(+339 files in other folders)
