[project]
name = "risk"
version = "0.1.0"
description = "Classic Risk board game with AI opponents"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
